k8s/httpserver-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
spec:
  selector:
    matchLabels:
      app: httpserver
  replicas: 3
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: http-metrics
      labels:
        app: httpserver
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: httpserver
        image: yeahe83/httpserver:1.04
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          name: http-metrics
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "echo Hello! > /usr/share/message"]
          preStop:
            exec:
              command: ["/bin/sh","-c","echo Bye! > /usr/share/message"]        
        startupProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 2 
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  selector:
    app: httpserver
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31080
  type: NodePort
