k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - cncamp.com
    secretName: cncamp-tls
  rules:
  - host: cncamp.com
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-basic
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpserver
            port:
              number: 80
